fix: uncomment backface-visibility and add border-radius to img styles

--- a/solutions/tools/bookstyle_wordlearning/bookstyle_wordlearning.css
+++ b/solutions/tools/bookstyle_wordlearning/bookstyle_wordlearning.css
@@ -83,7 +83,8 @@ img {
     position: absolute;
     width: 100%;
     height: 100%;
-    backface-visibility: hidden;
+    /*backface-visibility: hidden;*/
+    border-radius: 30px;
     display: flex;
     justify-content: center;
     align-items: center;
